# burnt_area_mapper

./: .cz.yaml  .env-sample  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
burnt_area_mapper/: CHANGELOG.md  burnt_area.py  main.py  sentinel.py  sentinel_sat.py
burnt_area_mapper/config/: config.json
burnt_area_mapper/utils/: io.py  typer.py  util.py
